# lds-cpp

./: AGENTS.md  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  SPDLOGGER_EXAMPLE.cpp  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classilds2_1_1_halton.html  classilds2_1_1_vd_corput.html  classlds2_1_1_circle.html  classlds2_1_1_halton.html  classlds2_1_1_halton_n.html  classlds2_1_1_sphere.html  classlds2_1_1_sphere3_hopf.html  classlds2_1_1_vd_corput.html  classlds2_1_1_vdcorput.html  classlds_1_1_lds.html  classlds_1_1circle.html  classlds_1_1cylin__n.html  classlds_1_1halton.html  classlds_1_1halton__n.html  classlds_1_1sphere.html  classlds_1_1sphere3.html  classlds_1_1sphere3__hopf.html  classlds_1_1sphere__n.html  classlds_1_1vdcorput.html  compile_commands.json  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_20e875b46f774aaa37c5fd6616e1d097.html  dir_31a378c84b956866319ca9d9294f1959.html  doc-dev.yml  files.html  greeter_8h.html  how-to-clang-tidy.md  ilds_8hpp.html  index.html  iwyu.out  (+25 more)
.github/workflows/: benchmark.bak  install.yml  standalone.bak  standalone.yml  test.yml  ubuntu.yml
cmake/: specific.cmake
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
include/lds/: greeter.h  ilds.hpp  lds.hpp  lds_n.hpp  lds_n.tpp  logger.hpp  low_discr_seq.hpp  low_discr_seq_n.hpp  sphere_n.hpp  sphere_n.tpp  temp.tpp  version.h  version.old
source/: greeter.cpp  lds.cpp  lds_n.cpp  logger.cpp  low_discr_seq_n.cpp  sphere_n.tpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  greeter.old  test_div_mod.tpp  test_ilds.cpp  test_lds.cpp  test_lds_n.cpp  test_lds_n.tpp  test_low_discr_seq.cpp  test_low_discr_seq_n.cpp  test_rapidcheck.tpp  test_sphere_n.cpp  test_sphere_n.tpp
test_installed/: CMakeLists.txt
